# pumpfun_indexer

./: Cargo.toml  README.md
migrations/: 20251025132601_init.sql  20251025145553_schema.sql  20251026153459_transactions_table.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/handlers/: health.rs
src/api/routes/: creators.rs  mod.rs  stats.rs  tokens.rs  trades.rs  websocket.rs
src/background/: mod.rs  sol_price.rs  state_backup.rs
src/config/: mod.rs
src/database/: mod.rs  model.rs
src/helius/: extractor.rs  mod.rs  parser.rs
src/processor/: calculator.rs  metrics.rs  mod.rs  state.rs
src/storage/: mod.rs  redis_client.rs
