[package]
name = "pumpfun_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
borsh = "1.5.7"
bs58 = "0.5.1"
chrono = "0.4.42"
dotenv = "0.15.0"
helius = "0.3.2"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "3.0.8"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
