[package]
name = "pumpfun_indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "indexer"
path = "src/main.rs"

[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
borsh = "1.5.7"
bs58 = "0.5.1"
chrono = "0.4.42"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
helius = "0.3.2"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "2.3.13"
solana-sdk = "2.3.1"
solana-transaction-status = "2.3.13"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
